Updated walkthrough text

--- a/examples/Walkthrough.ipynb
+++ b/examples/Walkthrough.ipynb
@@ -12,7 +12,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%%html\n",
@@ -196,7 +198,7 @@
     "from scannerpy.stdlib import parsers\n",
     "from pprint import pprint\n",
     "hists = output_table.load(['histogram'], parsers.histograms)    \n",
-    "for frame, histograms in hists:\n",
+    "for frame_id, histograms in hists:\n",
     "    pprint(histograms)\n",
     "    break"
    ]
