--- a/examples/Walkthrough.ipynb
+++ b/examples/Walkthrough.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Scanner walkthrough\n",
     "\n",
@@ -13,7 +16,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -24,7 +29,9 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "source": [
     "We've set up some scripts to help you download the video in the snippet below."
@@ -33,7 +40,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "import util\n",
@@ -44,6 +55,9 @@
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
     "import cv2\n",
+    "from timeit import default_timer as now\n",
+    "\n",
+    "start = now()\n",
     "video = cv2.VideoCapture(path)\n",
     "frames = []\n",
     "while True:\n",
@@ -51,6 +65,7 @@
     "    if not ret: break\n",
     "    frames.append(frame)\n",
     "video.release()\n",
+    "print 'Time to read frames: {:.3f}s'.format(now() - start)\n",
     "\n",
     "# Display the first frame    \n",
     "plt.imshow(cv2.cvtColor(frames[0], cv2.COLOR_RGB2BGR))"
@@ -58,7 +73,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Take another look at the video and see if you can identify when shots change. Our shot segmentation algorithm uses the following intuition: in a video, most frames are similar to the one following it. Because most shot changes happen with cuts (as opposed to dissolves or fades), there's an immediate visual break from one frame to the next. We want to identify when the change in visual content between two adjacent frames is substantially larger than normal. One way to estimate change in visual content is by computing a histogram of colors for each frame, i.e. count the number of dark pixels and light pixels in each color channel (red/green/blue), and then compute the magnitude of difference between adjacent frames' histograms. Let's visualize this for the above video:"
    ]
@@ -66,7 +84,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -76,18 +98,24 @@
     "N = len(frames)\n",
     "\n",
     "# Compute 3 color histograms (one for each channel) for each video frame\n",
+    "start = now()\n",
     "for frame in frames:\n",
     "    hists = [cv2.calcHist([frame], [channel], None, [16], [0, 256]) \n",
     "             for channel in range(3)]\n",
     "    histograms.append(hists)\n",
+    "print 'Time to compute histograms: {:.3f}s'.format(now() - start)\n",
     "\n",
     "# Compute differences between adjacent pairs of histograms\n",
-    "diffs = []        \n",
-    "for i in range(1, N):\n",
-    "    frame_diffs = [distance.chebyshev(histograms[i-1][channel], histograms[i][channel]) \n",
-    "                   for channel in range(3)]\n",
-    "    avg_diff = np.mean(frame_diffs)\n",
-    "    diffs.append(avg_diff)\n",
+    "def compute_histogram_diffs(histograms):    \n",
+    "    diffs = []        \n",
+    "    for i in range(1, N):\n",
+    "        frame_diffs = [distance.chebyshev(histograms[i-1][channel], histograms[i][channel]) \n",
+    "                       for channel in range(3)]\n",
+    "        avg_diff = np.mean(frame_diffs)\n",
+    "        diffs.append(avg_diff)\n",
+    "    return diffs\n",
+    "        \n",
+    "diffs = compute_histogram_diffs(histograms)\n",
     "\n",
     "# Plot the differences\n",
     "plt.rcParams[\"figure.figsize\"] = [16, 9]\n",
@@ -98,7 +126,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "This plot shows, for each frame, the difference between its color histograms and the previous frame's color histograms. Try playing around with the number of histogram bins as well as the [distance metric](https://docs.scipy.org/doc/scipy/reference/spatial.distance.html). As you can see, there are a number of sharp peaks interspersed throughout the video that likely correspond to shot boundaries. We can run a sliding window over the above graph to find the peaks:"
    ]
@@ -107,17 +138,25 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "WINDOW_SIZE = 500  # The size of our sliding window (how many data points to include)\n",
     "OUTLIER_STDDEV = 3 # Outliers are N standard deviations away from the mean of the sliding window\n",
-    "boundaries = []\n",
-    "for i in range(1, N):\n",
-    "    window = diffs[max(i-WINDOW_SIZE,0):min(i+WINDOW_SIZE,N)]\n",
-    "    if diffs[i-1] - np.mean(window) > OUTLIER_STDDEV * np.std(window):\n",
-    "        boundaries.append(i)\n",
+    "\n",
+    "def find_shot_boundaries(diffs):\n",
+    "    boundaries = []\n",
+    "    for i in range(1, N):\n",
+    "        window = diffs[max(i-WINDOW_SIZE,0):min(i+WINDOW_SIZE,N)]\n",
+    "        if diffs[i-1] - np.mean(window) > OUTLIER_STDDEV * np.std(window):\n",
+    "            boundaries.append(i)\n",
+    "    return boundaries\n",
+    "\n",
+    "boundaries = find_shot_boundaries(diffs)        \n",
     "\n",
     "print 'Shot boundaries are:'\n",
     "print boundaries\n",
@@ -129,7 +168,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "And we've done it! The video is now segmented in shots. At this point, you're probably wondering: \"...but I thought this was a Scanner tutorial!\" Well, consider now: what if you wanted to run this pipeline over a second trailer? A movie? A thousand movies? The simple Python code we wrote above is great for experimenting, but doesn't scale. To accelerate this analysis, we need to speed up the core computation, computing the color histogram. Here are some ways we can make that faster:\n",
     "\n",
@@ -147,6 +189,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "scrolled": true
    },
    "outputs": [],
@@ -162,7 +207,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "In Scanner, all data is organized into tables, just like a database. Videos are represented as tables where each frame is a row. You can see in the summary that the `example` table has three columns, `index` like the `id` field in SQL databases, `frame` which represents the raw RGB pixels, and `frame_info` that contains metadata about the frame like width and height. To create a video table, you run `db.ingest_videos(list of (table name, path) pairs)`. Each table has a name specified the first element in the ingested pairs. By default, `ingest_videos` will raise a `ScannerException` if you attempt to ingest over an existing table, but `force=True` will allow such behavior. Next, we want to compute the histogram over each frame."
    ]
@@ -170,21 +218,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
-    "frame, frame_info = input_table.as_op().all()\n",
+    "frame = input_table.as_op().all()\n",
     "histogram = db.ops.Histogram(\n",
-    "    frame = frame, frame_info = frame_info,\n",
+    "    frame = frame,\n",
     "    device=DeviceType.GPU) # Change this to DeviceType.CPU if you don't have a GPU\n",
     "job = Job(columns = [histogram], name = 'example_hist')\n",
+    "start = now()\n",
     "output_table = db.run(job, force=True) \n",
+    "print 'Time to decode + compute histograms: {:.3f}'.format(now() - start)\n",
     "print db.summarize()"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Computations in Scanner take tables as input and create new tables as output. Here, we are going to take our `example` table as input and create a new `example_hist` table that contains the histograms for every frame. To run a computation in Scanner, you define a series of ops (very similar to TensorFlow). First, we get the columns from our input table and say which frames to run over (`all` in this case). Then we have a single op, `Histogram`, that we specify should run on the GPU. Lastly, we define a `Job` that corresponds to a single output table, giving it a name (`'example_hist'`) and a list of columns (`[histogram]`). We provide the job to `db.run(..)` which executes the computation and returns the output table. Lastly, we want to load the results of our computation into Python for further processing."
    ]
@@ -192,20 +249,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "from scannerpy.stdlib import parsers\n",
     "from pprint import pprint\n",
-    "hists = output_table.load(['histogram'], parsers.histograms)    \n",
-    "for frame_id, histograms in hists:\n",
-    "    pprint(histograms)\n",
-    "    break"
+    "rows = output_table.load(['histogram'], parsers.histograms)\n",
+    "histograms = [h for _, h in rows]\n",
+    "\n",
+    "# Run the same shot detection pipeline as before\n",
+    "diffs = compute_histogram_diffs(histograms)\n",
+    "boundaries = find_shot_boundaries(diffs)\n",
+    "montage = make_montage(len(boundaries), iter([frames[i] for i in boundaries]))\n",
+    "plt.imshow(cv2.cvtColor(montage, cv2.COLOR_RGB2BGR))"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Because Scanner does not have a built-in type system, loading columns from a table requires a parsing function that converts between raw byte strings and Python-understandable data types. For example, the `parsers.histograms` parser function returns a nested Numpy array of the three histograms. Once you've parsed the table column, that's it! You now have your Scanner computation results loaded and ready to go.\n",
     "\n",
