--- a/examples/Walkthrough.ipynb
+++ b/examples/Walkthrough.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "# Scanner walkthrough\n",
     "\n",
-    "To explore how Scanner works, we're going to walk through a simple video analysis application. If you want to analyze a film, a common unit of analysis is the _shot_, short segments of video often delineated by the camera cutting to a different angle or location. In this walkthrough, we're going to use Scanner to implement _shot segmentation_, or breaking up a video into shots. To start, we need to get a video. We'll use a scene from the last Jason Bourne movie:"
+    "To explore how Scanner works, we're going to walk through a simple video analysis application. If you want to analyze a film, a common unit of analysis is the _shot_, short segments of video often delineated by the camera cutting to a different angle or location. In this walkthrough, we're going to use Scanner to implement _shot segmentation_, or breaking up a video into shots. To start, we need to get a video. We'll use a scene from Moana:"
    ]
   },
   {
@@ -23,7 +23,7 @@
    "outputs": [],
    "source": [
     "%%html\n",
-    "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/yvtb9A9ai9Q\" frameborder=\"0\" allowfullscreen></iframe>"
+    "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/79DijItQXMM\" frameborder=\"0\" allowfullscreen></iframe>"
    ]
   },
   {
@@ -68,7 +68,7 @@
     "print 'Time to read frames: {:.3f}s'.format(now() - start)\n",
     "\n",
     "# Display the first frame    \n",
-    "plt.imshow(cv2.cvtColor(frames[0], cv2.COLOR_RGB2BGR))"
+    "plt.imshow(cv2.cvtColor(frames[10], cv2.COLOR_RGB2BGR))"
    ]
   },
   {
