--- a/examples/Walkthrough.ipynb
+++ b/examples/Walkthrough.ipynb
@@ -67,7 +67,7 @@
     "video.release()\n",
     "print 'Time to read frames: {:.3f}s'.format(now() - start)\n",
     "\n",
-    "# Display the first frame    \n",
+    "# Display the tenth frame    \n",
     "plt.imshow(cv2.cvtColor(frames[10], cv2.COLOR_RGB2BGR))"
    ]
   },
