Update README with fresh tutorial

--- a/examples/Walkthrough.ipynb
+++ b/examples/Walkthrough.ipynb
@@ -16,7 +16,7 @@
    "outputs": [],
    "source": [
     "%%html\n",
-    "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/79DijItQXMM\" frameborder=\"0\" allowfullscreen></iframe>"
+    "<video width=\"560\" height=\"315\" src=\"https://storage.googleapis.com/scanner-data/public/sample-clip.mp4\" controls />"
    ]
   },
   {
@@ -55,7 +55,8 @@
     "print 'Time to read frames: {:.3f}s'.format(now() - start)\n",
     "\n",
     "# Display the tenth frame    \n",
-    "plt.imshow(cv2.cvtColor(frames[10], cv2.COLOR_RGB2BGR))"
+    "plt.imshow(cv2.cvtColor(frames[10], cv2.COLOR_RGB2BGR))\n",
+    "_ = plt.axis('off')"
    ]
   },
   {
@@ -101,7 +102,7 @@
     "plt.rcParams[\"figure.figsize\"] = [16, 9]\n",
     "plt.xlabel(\"Frame number\")\n",
     "plt.ylabel(\"Difference from previous frame\")\n",
-    "plt.plot(range(1, N), diffs)"
+    "_ = plt.plot(range(1, N), diffs)"
    ]
   },
   {
@@ -119,6 +120,8 @@
    },
    "outputs": [],
    "source": [
+    "import math\n",
+    "\n",
     "WINDOW_SIZE = 500  # The size of our sliding window (how many data points to include)\n",
     "OUTLIER_STDDEV = 3 # Outliers are N standard deviations away from the mean of the sliding window\n",
     "\n",
@@ -135,9 +138,29 @@
     "print 'Shot boundaries are:'\n",
     "print boundaries\n",
     "\n",
+    "\n",
+    "def tile(imgs, rows=None, cols=None):\n",
+    "    # If neither rows/cols is specified, make a square\n",
+    "    if rows is None and cols is None:\n",
+    "        rows = int(math.sqrt(len(imgs)))\n",
+    "\n",
+    "    if rows is None:\n",
+    "        rows = (len(imgs) + cols - 1) / cols\n",
+    "    else:\n",
+    "        cols = (len(imgs) + rows - 1) / rows\n",
+    "\n",
+    "    # Pad missing frames with black\n",
+    "    diff = rows * cols - len(imgs)\n",
+    "    if diff != 0:\n",
+    "        imgs.extend([np.zeros(imgs[0].shape, dtype=imgs[0].dtype) for _ in range(diff)])\n",
+    "\n",
+    "    return np.vstack([np.hstack(imgs[i * cols:(i + 1) * cols]) for i in range(rows)])\n",
+    "\n",
+    "\n",
     "from scannerpy.stdlib.montage import make_montage\n",
-    "montage = make_montage(len(boundaries), iter([frames[i] for i in boundaries]))\n",
-    "plt.imshow(cv2.cvtColor(montage, cv2.COLOR_RGB2BGR))"
+    "montage = tile([frames[i] for i in boundaries])\n",
+    "plt.imshow(cv2.cvtColor(montage, cv2.COLOR_RGB2BGR))\n",
+    "_ = plt.axis('off')"
    ]
   },
   {
@@ -158,13 +181,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'path' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-7ceb82a627a8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# If you have a cluster, you can specify: Database(master='localhost:5001', workers=['worker1:5002', 'worker2:5002'...])\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# By default, the database will only run on the local machine.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0;34m[\u001b[0m\u001b[0minput_table\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mingest_videos\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'example'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mforce\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0mdb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msummarize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'path' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "from scannerpy import Database, DeviceType, Job, BulkJob\n",
+    "from scannerpy import Database, DeviceType, Job\n",
     "\n",
     "db = Database()\n",
     "# If you have a cluster, you can specify: Database(master='localhost:5001', workers=['worker1:5002', 'worker2:5002'...])\n",
@@ -188,19 +223,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "frame = db.ops.FrameInput()\n",
+    "frame = db.sources.FrameColumn()\n",
     "histogram = db.ops.Histogram(\n",
     "    frame = frame,\n",
-    "    device = DeviceType.GPU) # Change this to DeviceType.CPU if you don't have a GPU\n",
-    "output = db.ops.Output(columns = [histogram])\n",
+    "    device = DeviceType.CPU) # Change this to DeviceType.GPU if you have a GPU\n",
+    "output = db.sinks.Column(columns={'histogram': histogram})\n",
     "job = Job(op_args = {\n",
     "    frame: db.table('example').column('frame'),\n",
     "    output: 'example_hist'\n",
     "})\n",
-    "bulk_job = BulkJob(output = output, jobs = [job])\n",
     "\n",
     "start = now()\n",
-    "[output_table] = db.run(bulk_job, force=True) \n",
+    "[output_table] = db.run(output, [job], force=True) \n",
     "print 'Time to decode + compute histograms: {:.3f}'.format(now() - start)\n",
     "print db.summarize()"
    ]
@@ -210,11 +244,11 @@
    "metadata": {},
    "source": [
     "Computations in Scanner are defined in a *data-parallel* manner--that is, you write a computation that takes in one (or a few) frames at a time, and then the Scanner runtime runs your computation in parallel across your video. Here, we define a computation that computes a color histogram for each frame in the video. This is done by defining a series of \"ops\" (operators, similar to TensorFlow):\n",
-    "1. The `FrameInput` op represents a single frame, the input to our computation. This will be drawn from a video.\n",
+    "1. The `FrameColumn` source represents a stream of frames, the input to our computation. This will be drawn from a video.\n",
     "2. `Histogram` is an op that computes a color histogram over the input `frame`. We specify that it should run on the CPU.\n",
-    "3. `Output` represents the final output of our computation, the data that will get written back to our database, in this case a table with a single column containing the histogram for each frame of the input table.\n",
+    "3. `Column` represents the final output of our computation, the data that will get written back to our database, in this case a table with a single column containing the histogram for each frame of the input table.\n",
     "\n",
-    "Once we define a computation, then a `Job` provides parameters to the computation, here saying which table the frames should be drawn from (`example`), and what the name of the output table should be (`example_hist`). Lastly, we define a `BulkJob` with containing our job and the output node (\"bulk\" because we can run many jobs in parallel), and then tell the database to run those jobs.\n",
+    "Once we define a computation, then a `Job` provides parameters to the computation, here saying which table the frames should be drawn from (`example`), and what the name of the output table should be (`example_hist`). Lastly, we use `db.run(...)` with the computation graph (given by the output node) and the list of jobs to execute the computation.\n",
     "\n",
     "After a job is complete, we want to load the results of our computation into Python for further processing:"
    ]
@@ -225,23 +259,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scannerpy.stdlib import parsers\n",
+    "from scannerpy.stdlib import readers\n",
     "from pprint import pprint\n",
-    "rows = output_table.load(['histogram'], parsers.histograms)\n",
-    "histograms = [h for _, h in rows]\n",
+    "rows = list(output_table.column('histogram').load(readers.histograms))\n",
     "\n",
     "# Run the same shot detection pipeline as before\n",
     "diffs = compute_histogram_diffs(histograms)\n",
     "boundaries = find_shot_boundaries(diffs)\n",
-    "montage = make_montage(len(boundaries), iter([frames[i] for i in boundaries]))\n",
-    "plt.imshow(cv2.cvtColor(montage, cv2.COLOR_RGB2BGR))"
+    "montage = tile([frames[i] for i in boundaries])\n",
+    "plt.imshow(cv2.cvtColor(montage, cv2.COLOR_RGB2BGR))\n",
+    "_ = plt.axis('off')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Because Scanner does not have a built-in type system, loading columns from a table requires a parsing function that converts between raw byte strings and Python-understandable data types. For example, the `parsers.histograms` parser function returns a nested Numpy array of the three histograms. Once you've parsed the table column, that's it! You now have your Scanner computation results loaded and ready to go.\n",
+    "Because Scanner does not have a built-in type system, loading columns from a table requires a parsing function that converts between raw byte strings and Python-understandable data types. For example, the `readers.histograms` parser function returns a nested Numpy array of the three histograms. Once you've parsed the table column, that's it! You now have your Scanner computation results loaded and ready to go.\n",
     "\n",
     "Let's reflect for a moment on the script we just made. Is it any faster than before? Going back to our four bullet points:\n",
     "\n",
@@ -254,7 +288,7 @@
     "\n",
     "So, where should you go from here? I would check out:\n",
     "* [Extended tutorial](https://github.com/scanner-research/scanner/tree/master/examples/tutorial): covers more Scanner features like sampling patterns and building custom ops.\n",
-    "* [Code examples](https://github.com/scanner-research/scanner/tree/master/examples): other applications like face detection and reverse image search implemented with Scanner."
+    "* [Example applications](https://github.com/scanner-research/scanner/tree/master/examples/apps): other applications like face detection and reverse image search implemented with Scanner."
    ]
   }
  ],
