Copy edit pass through docs

--- a/examples/Walkthrough.ipynb
+++ b/examples/Walkthrough.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Scanner walkthrough\n",
     "\n",
-    "To explore how Scanner works, we're going to walk through a simple video analysis application. If you want to analyze a film, a common unit of analysis is the _shot_, short segments of video often delineated by the camera cutting to a different angle or location. In this walkthrough, we're going to use Scanner to implement _shot segmentation_, or breaking up a video into shots. To start, we need to get a video. We'll use a scene from Moana:"
+    "To explore how Scanner fits in to a bigger pipeline, we're going to walk through a simple video analysis application. If you want to analyze a film, a common unit of analysis is the _shot_, short segments of video often delineated by the camera cutting to a different angle or location. In this walkthrough, we're going to use Scanner to implement _shot segmentation_, or breaking up a video into shots. To start, we need to get a video. We'll use a scene from Baby Driver:"
    ]
   },
   {
@@ -36,7 +36,7 @@
    "source": [
     "import util\n",
     "path = util.download_video()\n",
-    "print path\n",
+    "print(path)\n",
     "\n",
     "# Read all the frames\n",
     "%matplotlib inline\n",
@@ -44,6 +44,7 @@
     "import cv2\n",
     "from timeit import default_timer as now\n",
     "\n",
+    "print('Reading frames from video...')\n",
     "start = now()\n",
     "video = cv2.VideoCapture(path)\n",
     "frames = []\n",
@@ -52,7 +53,8 @@
     "    if not ret: break\n",
     "    frames.append(frame)\n",
     "video.release()\n",
-    "print 'Time to read frames: {:.3f}s'.format(now() - start)\n",
+    "read_frame_time = now() - start\n",
+    "print('Time to read frames: {:.3f}s'.format(read_frame_time))\n",
     "\n",
     "# Display the tenth frame    \n",
     "plt.imshow(cv2.cvtColor(frames[10], cv2.COLOR_RGB2BGR))\n",
@@ -74,17 +76,20 @@
    "source": [
     "import numpy as np\n",
     "from scipy.spatial import distance\n",
+    "from tqdm import tqdm\n",
     "\n",
     "histograms = []\n",
     "N = len(frames)\n",
     "\n",
     "# Compute 3 color histograms (one for each channel) for each video frame\n",
+    "print('Computing color histograms...')\n",
     "start = now()\n",
-    "for frame in frames:\n",
+    "for frame in tqdm(frames):\n",
     "    hists = [cv2.calcHist([frame], [channel], None, [16], [0, 256]) \n",
     "             for channel in range(3)]\n",
     "    histograms.append(hists)\n",
-    "print 'Time to compute histograms: {:.3f}s'.format(now() - start)\n",
+    "compute_hist_time = now() - start\n",
+    "print('Time to compute histograms: {:.3f}s'.format(compute_hist_time))\n",
     "\n",
     "# Compute differences between adjacent pairs of histograms\n",
     "def compute_histogram_diffs(histograms):    \n",
@@ -135,8 +140,8 @@
     "\n",
     "boundaries = find_shot_boundaries(diffs)        \n",
     "\n",
-    "print 'Shot boundaries are:'\n",
-    "print boundaries\n",
+    "print('Shot boundaries are:')\n",
+    "print(boundaries)\n",
     "\n",
     "\n",
     "def tile(imgs, rows=None, cols=None):\n",
@@ -145,9 +150,9 @@
     "        rows = int(math.sqrt(len(imgs)))\n",
     "\n",
     "    if rows is None:\n",
-    "        rows = (len(imgs) + cols - 1) / cols\n",
+    "        rows = (len(imgs) + cols - 1) // cols\n",
     "    else:\n",
-    "        cols = (len(imgs) + rows - 1) / rows\n",
+    "        cols = (len(imgs) + rows - 1) // rows\n",
     "\n",
     "    # Pad missing frames with black\n",
     "    diff = rows * cols - len(imgs)\n",
@@ -181,23 +186,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'path' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-7ceb82a627a8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# If you have a cluster, you can specify: Database(master='localhost:5001', workers=['worker1:5002', 'worker2:5002'...])\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# By default, the database will only run on the local machine.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0;34m[\u001b[0m\u001b[0minput_table\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mingest_videos\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'example'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mforce\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0mdb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msummarize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'path' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from scannerpy import Database, DeviceType, Job\n",
     "\n",
@@ -205,7 +198,7 @@
     "# If you have a cluster, you can specify: Database(master='localhost:5001', workers=['worker1:5002', 'worker2:5002'...])\n",
     "# By default, the database will only run on the local machine.\n",
     "[input_table], _ = db.ingest_videos([('example', path)], force=True)\n",
-    "print db.summarize()"
+    "print(db.summarize())"
    ]
   },
   {
@@ -233,10 +226,13 @@
     "    output: 'example_hist'\n",
     "})\n",
     "\n",
+    "\n",
     "start = now()\n",
     "[output_table] = db.run(output, [job], force=True) \n",
-    "print 'Time to decode + compute histograms: {:.3f}'.format(now() - start)\n",
-    "print db.summarize()"
+    "scanner_time = now() - start\n",
+    "print('Time to decode + compute histograms: {:.3f}'.format(scanner_time))\n",
+    "print('Scanner was {:.2f}x faster'.format((read_frame_time + compute_hist_time) / scanner_time))\n",
+    "print(db.summarize())"
    ]
   },
   {
@@ -301,14 +297,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
