--- a/examples/Walkthrough.ipynb
+++ b/examples/Walkthrough.ipynb
@@ -12,7 +12,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-03-18T17:43:52.836052Z",
+     "start_time": "2019-03-18T17:43:52.822354Z"
+    }
+   },
    "outputs": [],
    "source": [
     "%%html\n",
@@ -31,7 +36,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-03-18T17:45:46.605953Z",
+     "start_time": "2019-03-18T17:45:46.052732Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import util\n",
@@ -71,7 +81,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-03-18T17:47:34.691849Z",
+     "start_time": "2019-03-18T17:47:34.130661Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -121,6 +136,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-03-18T17:47:43.297567Z",
+     "start_time": "2019-03-18T17:47:43.252680Z"
+    },
     "scrolled": true
    },
    "outputs": [],
@@ -181,58 +200,59 @@
     "\n",
     "All of that is fairly difficult to do with Python, but easy with Scanner. \n",
     "\n",
-    "Now I'm going to walk you through running the histogram computation in Scanner. First, we start by setting up our Scanner database."
+    "Now I'm going to walk you through running the histogram computation in Scanner. First, we start by setting up our inputs."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-03-18T17:45:48.948917Z",
+     "start_time": "2019-03-18T17:45:48.565586Z"
+    },
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "from scannerpy import Database, DeviceType, Job\n",
+    "from scannerpy import Client, DeviceType, PerfParams\n",
+    "from scannerpy.storage import NamedVideoStream, NamedStream\n",
+    "import scannertools\n",
     "\n",
-    "db = Database()\n",
-    "# If you have a cluster, you can specify: Database(master='localhost:5001', workers=['worker1:5002', 'worker2:5002'...])\n",
-    "# By default, the database will only run on the local machine.\n",
-    "[input_table], _ = db.ingest_videos([('example', path)], force=True)\n",
-    "print(db.summarize())"
+    "sc = Client()\n",
+    "stream = NamedVideoStream(sc, 'example', path)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In Scanner, all data is organized into tables, just like a database. Videos are represented as tables where each frame is a row. You can see in the summary that the `example` table has two columns, `index` like the `id` field in a SQL database and `frame` which represents the raw RGB pixels. Scanner columns have one of two types: either it's a frame (i.e. image or video), or it's a byte array.\n",
-    "\n",
-    "To create a video table, you run `db.ingest_videos(list of (table name, path) pairs)`. Each table has a name specified the first element in the ingested pairs. By default, `ingest_videos` will raise a `ScannerException` if you attempt to ingest over an existing table, but `force=True` will allow such behavior. Next, we want to compute the histogram over each frame."
+    "In Scanner, all data is organized into streams, or lazy lists of elements. Videos are streams where each element is a frame. We can create a stream from a video by defining a `NamedVideoStream` pointing to the video path. The name allows Scanner to store some metadata about the video in a local database that we use to optimize video decode at runtime."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-03-18T17:46:11.877611Z",
+     "start_time": "2019-03-18T17:45:49.179878Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "frame = db.sources.FrameColumn()\n",
-    "histogram = db.ops.Histogram(\n",
+    "frame = sc.io.Input([stream])\n",
+    "histogram = sc.ops.Histogram(\n",
     "    frame = frame,\n",
     "    device = DeviceType.CPU) # Change this to DeviceType.GPU if you have a GPU\n",
-    "output = db.sinks.Column(columns={'histogram': histogram})\n",
-    "job = Job(op_args = {\n",
-    "    frame: db.table('example').column('frame'),\n",
-    "    output: 'example_hist'\n",
-    "})\n",
-    "\n",
+    "output = NamedStream(sc, 'example_hist')\n",
+    "output_op = sc.io.Output(histogram, [output])\n",
     "\n",
     "start = now()\n",
-    "[output_table] = db.run(output, [job], force=True) \n",
+    "sc.run(output_op, PerfParams.estimate())\n",
     "scanner_time = now() - start\n",
     "print('Time to decode + compute histograms: {:.3f}'.format(scanner_time))\n",
-    "print('Scanner was {:.2f}x faster'.format((read_frame_time + compute_hist_time) / scanner_time))\n",
-    "print(db.summarize())"
+    "print('Scanner was {:.2f}x faster'.format((read_frame_time + compute_hist_time) / scanner_time))"
    ]
   },
   {
@@ -240,24 +260,26 @@
    "metadata": {},
    "source": [
     "Computations in Scanner are defined in a *data-parallel* manner--that is, you write a computation that takes in one (or a few) frames at a time, and then the Scanner runtime runs your computation in parallel across your video. Here, we define a computation that computes a color histogram for each frame in the video. This is done by defining a series of \"ops\" (operators, similar to TensorFlow):\n",
-    "1. The `FrameColumn` source represents a stream of frames, the input to our computation. This will be drawn from a video.\n",
+    "1. The `Input` source represents a stream of frames, the input to our computation. This will be drawn from a video.\n",
     "2. `Histogram` is an op that computes a color histogram over the input `frame`. We specify that it should run on the CPU.\n",
-    "3. `Column` represents the final output of our computation, the data that will get written back to our database, in this case a table with a single column containing the histogram for each frame of the input table.\n",
+    "3. `Output` represents the final output of our computation, the data that will get written back to disk, in this case a stream containing the histogram for each frame of the input stream.\n",
     "\n",
-    "Once we define a computation, then a `Job` provides parameters to the computation, here saying which table the frames should be drawn from (`example`), and what the name of the output table should be (`example_hist`). Lastly, we use `db.run(...)` with the computation graph (given by the output node) and the list of jobs to execute the computation.\n",
-    "\n",
-    "After a job is complete, we want to load the results of our computation into Python for further processing:"
+    "We use `sc.run(...)` with the computation graph (given by the output node) to execute the computation. Next, we want to load the results of our computation into Python for further processing:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-03-18T17:47:54.066708Z",
+     "start_time": "2019-03-18T17:47:53.913556Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "from scannerpy.stdlib import readers\n",
     "from pprint import pprint\n",
-    "rows = list(output_table.column('histogram').load(readers.histograms))\n",
+    "histograms = list(output.load())\n",
     "\n",
     "# Run the same shot detection pipeline as before\n",
     "diffs = compute_histogram_diffs(histograms)\n",
@@ -271,7 +293,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Because Scanner does not have a built-in type system, loading columns from a table requires a parsing function that converts between raw byte strings and Python-understandable data types. For example, the `readers.histograms` parser function returns a nested Numpy array of the three histograms. Once you've parsed the table column, that's it! You now have your Scanner computation results loaded and ready to go.\n",
+    "Loading output is as simple as `output.load()`, a generator that reads elements of the stored stream from disk (or wherever it was written).\n",
     "\n",
     "Let's reflect for a moment on the script we just made. Is it any faster than before? Going back to our four bullet points:\n",
     "\n",
@@ -305,6 +327,16 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.5.2"
+  },
+  "toc": {
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": "block",
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
