Minor doc updates + fix bugs in Walkthrough.ipynb

--- a/examples/Walkthrough.ipynb
+++ b/examples/Walkthrough.ipynb
@@ -21,7 +21,7 @@
    "outputs": [],
    "source": [
     "%%html\n",
-    "<video width=\"560\" height=\"315\" src=\"https://storage.googleapis.com/scanner-data/public/sample-clip.mp4\" controls />"
+    "<video width=\"560\" height=\"315\" src=\"https://storage.googleapis.com/scanner-data/public/sample-clip.mp4?ignore_cache=1\" controls />"
    ]
   },
   {
@@ -62,6 +62,7 @@
     "    ret, frame = video.read()\n",
     "    if not ret: break\n",
     "    frames.append(frame)\n",
+    "print(len(frames))\n",
     "video.release()\n",
     "read_frame_time = now() - start\n",
     "print('Time to read frames: {:.3f}s'.format(read_frame_time))\n",
@@ -181,7 +182,6 @@
     "    return np.vstack([np.hstack(imgs[i * cols:(i + 1) * cols]) for i in range(rows)])\n",
     "\n",
     "\n",
-    "from scannerpy.stdlib.montage import make_montage\n",
     "montage = tile([frames[i] for i in boundaries])\n",
     "plt.imshow(cv2.cvtColor(montage, cv2.COLOR_RGB2BGR))\n",
     "_ = plt.axis('off')"
@@ -215,7 +215,7 @@
    },
    "outputs": [],
    "source": [
-    "from scannerpy import Client, DeviceType, PerfParams\n",
+    "from scannerpy import Client, DeviceType, PerfParams, CacheMode\n",
     "from scannerpy.storage import NamedVideoStream, NamedStream\n",
     "import scannertools\n",
     "\n",
@@ -246,10 +246,10 @@
     "    frame = frame,\n",
     "    device = DeviceType.CPU) # Change this to DeviceType.GPU if you have a GPU\n",
     "output = NamedStream(sc, 'example_hist')\n",
-    "output_op = sc.io.Output(histogram, [output])\n",
+    "output_op = sc.io.Output(sc.streams.Range(histogram, [(0, 2000)]), [output])\n",
     "\n",
     "start = now()\n",
-    "sc.run(output_op, PerfParams.estimate())\n",
+    "sc.run(output_op, PerfParams.estimate(), cache_mode=CacheMode.Overwrite)\n",
     "scanner_time = now() - start\n",
     "print('Time to decode + compute histograms: {:.3f}'.format(scanner_time))\n",
     "print('Scanner was {:.2f}x faster'.format((read_frame_time + compute_hist_time) / scanner_time))"
@@ -312,9 +312,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
