--- a/examples/Walkthrough.ipynb
+++ b/examples/Walkthrough.ipynb
@@ -217,7 +217,7 @@
    "source": [
     "from scannerpy import Client, DeviceType, PerfParams, CacheMode\n",
     "from scannerpy.storage import NamedVideoStream, NamedStream\n",
-    "import scannertools\n",
+    "import scannertools.imgproc\n",
     "\n",
     "sc = Client()\n",
     "stream = NamedVideoStream(sc, 'example', path)"
